--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,40 @@ version: "3.9"
 services:
   app:
     build:
+      # tells Docker to build the image from the Dockerfile in the current directory.
       context: .
+      # This sets a build argument (useful for things like development settings).  
       args:
       - DEV=true
-    ports:
+    # maps port 8000 on your machine to port 8000 in the container (useful for web servers like Django or Flask).
+    ports: 
       - "8000:8000"
     volumes:
       - ./app:/app
+    # # overrides the default command and starts a Django development server that listens on all network interfaces
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
+             
+
+    environment:
+      - DB_HOST=db
+      - DB_NAME=devdb
+      - DB_USER=devuser
+      - DB_PASS=changeme
+    depends_on:
+      - db
+
+  db:
+    image: postgres:13-alpine
+    volumes:
+      - dev-db-data:/var/lib/postgresql/data
+    # set the initial database configuration for the new DB service
+    environment:
+      - POSTGRES_DB=devdb
+      - POSTGRES_USER=devuser
+      - POSTGRES_PASSWORD=changeme
+
+volumes:
+  dev-db-data:
