--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,14 @@ version: "3.9"
 services:
   app:
     build:
-      # tells Docker to build the image from the Dockerfile in the current directory.
       context: .
-      # This sets a build argument (useful for things like development settings).
       args:
       - DEV=true
-    # maps port 8000 on your machine to port 8000 in the container (useful for web servers like Django or Flask).
     ports:
       - "8000:8000"
     volumes:
       - ./app:/app
       - dev-static-data:/vol/web
-    # # overrides the default command and starts a Django development server that listens on all network interfaces
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
@@ -26,6 +22,7 @@ services:
       - DB_NAME=devdb
       - DB_USER=devuser
       - DB_PASS=changeme
+      - DEBUG=1
     depends_on:
       - db
 
@@ -33,7 +30,6 @@ services:
     image: postgres:13-alpine
     volumes:
       - dev-db-data:/var/lib/postgresql/data
-    # set the initial database configuration for the new DB service
     environment:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
